tests/error/enum_errors/variant_field_access.err
Error: Attribute not found (at $FILE:15:12)
   | 
13 | def use_enum() -> None:
14 |     variant = Message.Quit(1)
15 |     variant.x
   |             ^ `Message` has no variant or method `x`

Guppy compilation failed due to 1 previous error
